# polkadex-aura-node

./: Dockerfile  docker-compose.yml
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/polkadex/: Cargo.toml
pallets/polkadex/rpc/: Cargo.toml
pallets/polkadex/runtime-api/: Cargo.toml
pallets/polkadex/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: bootnode_alice.sh  createCustomSpec.sh  customSpec.json  customSpecRaw.json  validator_bob.sh  validator_charlie.sh
scripts/aws-scripts/: Dockerfile  bootnode_alice-aws.sh  buildspec-dev.yml  createCustomSpec.sh  validator_bob-aws.sh  validator_charlie-aws.sh
scripts/docker-compose/: Dockerfile  bootnode_alice.sh  upserver.sh  validator_bob.sh  validator_charlie.sh
