[package]
authors = ['Polkadex Team <https://github.com/Polkadex-Substrate/Polkadex']
description = 'Polkadex: Orderbook based Trading Chain Node.'
edition = '2018'
homepage = 'https://github.com/Polkadex-Substrate/Polkadex'
license = 'Unlicense'
name = 'pallet-polkadex'
repository = 'https://github.com/Polkadex-Substrate/Polkadex'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dev-dependencies]
serde_json = "1.0.41"

[dependencies]
compare = "0.1.0"
serde = { version = "1.0.101", default-features = false, features = ["derive"], optional= true }
jsonrpc-core = "14.0.3"
hex = {version = "0.4.2", default-features = false}
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
sp-io = { version ="2.0.0", default-features=false }
sp-std = { version ="2.0.0", default-features=false }
sp-runtime = { version ="2.0.0", default-features=false }
sp-arithmetic = { version ="2.0.0", default-features=false }
sp-core = { version ="2.0.0", default-features=false }

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies.pallet-generic-asset]
default-features = false
git = 'https://github.com/Gauthamastro/generic_asset.git'

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-generic-asset/std',
    'sp-core/std',
]
