[package]
name = "rpc"
version = "0.1.0"
authors = ["Polkadex Team"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4" }
jsonrpc-core = "15.0.0"
jsonrpc-core-client = "15.0.0"
jsonrpc-derive = "15.0.0"
serde = { version = "1.0.101", features = ["derive"], optional = true }
runtime-api = { default-features = false, path = "../runtime-api" }
pallet-polkadex = { default-features = false, path = "../" }
sc-rpc = '2.0.0'
sp-runtime = '2.0.0'
sp-blockchain = '2.0.0'
sp-api = '2.0.0'
sp-arithmetic = '2.0.0'
sp-std ='2.0.0'
sp-core ='2.0.0'
